--- a/task_4/analysis_and_documentation/analysis.Rmd
+++ b/task_4/analysis_and_documentation/analysis.Rmd
@@ -1,16 +1,23 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
-```{r}
+```{r message = F, warning = F}
 library(tidyverse)
 library(here)
 ```
 
 # Candy Data
+
+
 The halloween candy dataset are the results of an online survey of trick or treat halloween candy hauls. 
 Each participant responds to each "candy" (or other item) with a feeling of joy, despair or meh (indifference) if they were to find said item in their halloween haul. 
 Participants were also able to enter their age, gender, whether or not they were actually trick or treating and their country. 
+
+## Data Cleaning
+
 
 Before running analysis, `candy_data_cleaning.R` must be run in order to export the clean data as a csv. 
 Steps taken to clean the data:
@@ -23,27 +30,31 @@ Steps taken to clean the data:
 * column is_candy indicates if the item is indeed a candy
 
 
-```{r}
+```{r message = F, warning = F}
+#due to the number of NAs in country and gender, need to specify col type
 candy_data <- read_csv(here::here("clean_data/candy_clean.csv"), 
                   col_types = cols(country = col_character(),
                                    gender = col_character()
                                    ))
 ```
 
-### What is the total number of candy ratings given across the three years. (number of candy ratings, not number of raters. Don’t count missing values)
+## Data Analysis 
 
-```{r}
-candy_data %>%
-  group_by(is_candy) %>%
-  summarise(count = n())
+
+### What is the total number of candy ratings given across the three years
+
+```{r message = F, warning = F}
+candy_nrow <- candy_data %>%
+  filter(is_candy == TRUE) %>%
+  nrow()
 ```
 
-The number of rows in candy_data indicates the total number of ratings of JOY/DESPAIR/MEH. Of those, 688,693 are candy.
+The total number of ratings across all items is `r nrow(candy_data)`. Of those approximately `r candy_nrow` are candy.
 
 
 ### What was the average age of people who are going out trick or treating and the average age of people not going trick or treating?
 
-```{r}
+```{r message = F, warning = F}
 candy_data %>%
   group_by(going_out) %>%
   summarise(avg_age = mean(age, na.rm = TRUE))
@@ -51,7 +62,7 @@ candy_data %>%
 
 ### For each of joy, despair and meh, which candy bar received the most of these ratings?
 
-```{r}
+```{r message = F, warning = F}
 # For items that are candy 
 candy_data %>%
   filter(is_candy == TRUE) %>%
@@ -61,7 +72,7 @@ candy_data %>%
   slice_max(num_ratings)
 ```
 
-```{r}
+```{r message = F, warning = F}
 # For all items surveyed
 candy_data %>%
   group_by(response, candy) %>%
@@ -72,7 +83,7 @@ candy_data %>%
 
 ### How many people rated Starburst as despair?
 
-```{r}
+```{r message = F, warning = F}
 candy_data %>% 
   filter(candy == "starburst" & response == "DESPAIR") %>%
   count()
@@ -81,7 +92,7 @@ candy_data %>%
 ## Candy Ratings
 
 For the next three questions, count despair as -1, joy as +1 and meh as 0.
-```{r}
+```{r message = F, warning = F}
 candy_ratings <- candy_data %>% 
   mutate(rating_score = 
           case_when(
@@ -94,7 +105,7 @@ candy_ratings <- candy_data %>%
 
 ### What was the most popular candy bar by this rating system for each gender in the dataset?
 
-```{r}
+```{r message = F, warning = F}
 candy_ratings %>%
   filter(is_candy == TRUE) %>%
   filter(!is.na(gender)) %>%
@@ -107,7 +118,7 @@ Any full sized candy bar is the most popular accross all genders. The next most 
 
 
 
-```{r}
+```{r message = F, warning = F}
 candy_ratings %>%
   filter(!is.na(gender)) %>%
   group_by(candy, gender) %>%
@@ -119,7 +130,7 @@ If we ignore any full sized candy bars, and look at all other items rated (inclu
 
 
 ### What was the most popular candy bar in each year?
-```{r}
+```{r message = F, warning = F}
 candy_ratings %>% 
   filter(candy != "any_full_sized_candy_bar" & is_candy == TRUE) %>%
   group_by(candy, year) %>%
@@ -131,7 +142,7 @@ Across all years, any full sized candy bar takes top place. Next in line is pean
 
 
 ### What was the most popular candy bar by this rating for people in US, Canada, UK and all other countries?
-```{r}
+```{r message = F, warning = F}
 candy_ratings %>%
   filter(is_candy == TRUE) %>%
   mutate(country_group = recode(country,
@@ -147,7 +158,7 @@ candy_ratings %>%
 ```
 Any full sized candy bar takes top place in all countries. In the UK it shares top place with rolos. 
 
-```{r}
+```{r message = F, warning = F}
 candy_ratings %>%
   mutate(country_group = recode(country,
     "usa" = "usa",
